Fix sidebar padding on Firefox

--- a/src/components/SideBar/side-bar.module.css
+++ b/src/components/SideBar/side-bar.module.css
@@ -3,7 +3,7 @@
   top: calc(36px + 2 * var(--unit0));
   bottom: 0;
   overflow-y: auto;
-  padding: 1.5em 0;
+  padding: 1.5em 0 0;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -101,7 +101,7 @@
 .socialLinkList {
   display: flex;
   width: 192px;
-  margin: 2.5em auto 0;
+  margin: 2.5em auto 1.5em;
 }
 
 .socialLink {
